--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,6 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4' //  custom editText
     implementation 'com.squareup.retrofit2:retrofit:2.3.0' // http client
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0' // http client
+    implementation 'com.github.florent37:materialtextfield:1.0.7' // custom editText 2
 
 }
