--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0' // http client
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0' // http client
     implementation 'com.github.florent37:materialtextfield:1.0.7' // custom editText 2
+    implementation 'com.github.d-max:spots-dialog:1.1@aar' // custom dialog
 
 }
